making navmesh and some refactoring

--- a/Pokrovskiy_HW_2/Assembly-CSharp.csproj
+++ b/Pokrovskiy_HW_2/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\EnemyNavigation.cs" />
     <Compile Include="Assets\HW2\Scripts\BulletHitDetector.cs" />
     <Compile Include="Assets\HW2\Scripts\BulletInit.cs" />
     <Compile Include="Assets\HW2\Scripts\CameraManager.cs" />
